--- a/Check_Out_App_ULC/Views/tb_LongtermWaitlist/LongtermWaitlist.cshtml
+++ b/Check_Out_App_ULC/Views/tb_LongtermWaitlist/LongtermWaitlist.cshtml
@@ -115,7 +115,7 @@
                                     {
                                         @Html.DropDownList("upc", (IEnumerable<SelectListItem>)ViewBag.upcsHP, "Choose UPC" )
                                     }
-                                    else if(item.WaitlistReason=="Mac")
+                                    else if(item.WaitlistReason=="Macbook")
                                     {
                                         @Html.DropDownList("upc", (IEnumerable<SelectListItem>)ViewBag.upcsMac, "Choose UPC" )
                                     }
