--- a/Check_Out_App_ULC/Views/tb_CSULabTechs/TestSling.cshtml
+++ b/Check_Out_App_ULC/Views/tb_CSULabTechs/TestSling.cshtml
@@ -20,7 +20,9 @@
         
     <p style="font-size:16px"><u>@Html.ActionLink("Test Sling Login", "SlingLogin", "Api/Sling")</u></p>
     <br />
-    <p style="font-size:16px"><u>@Html.ActionLink("Test Sling Get Announcements", "SlingGetAnnouncements", "Api/Sling")</u></p>    
+    <p style="font-size:16px"><u>@Html.ActionLink("Test Sling Get Announcements", "SlingGetAnnouncements", "Api/Sling")</u></p>
+    <br />
+    <p style="font-size:16px"><u>@Html.ActionLink("Test Sling Get Articles", "SlingGetArticles", "Api/Sling")</u></p>    
 
 </div>
 
