--- a/Check_Out_App_ULC/Views/Home/Index.cshtml
+++ b/Check_Out_App_ULC/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using System.Data.SqlTypes
+﻿
+@using System.Data.SqlTypes
 @using System.Web.Mvc.Html;
 
 @{
@@ -138,6 +139,8 @@
         </div>
     }
 
+
+@Html.Partial("_SlingArticles", new Sling.SlingArticle(), new ViewDataDictionary())
 
 
 
