Minor Sling change to make visible to staff

--- a/Check_Out_App_ULC/Views/Home/_SlingArticles.cshtml
+++ b/Check_Out_App_ULC/Views/Home/_SlingArticles.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<ViewModels.SlingArticlesView>
 
-@if (SessionVariables.CurrentUser != null && (SessionVariables.CurrentUser.ENAME == "russell1" || SessionVariables.CurrentUser.ENAME == "jdruss"))
+@if (SessionVariables.CurrentUser != null)
 {
     <br/>
     <h3>Here's the latest from Sling:</h3>
