Updated task scheduler to cache Sling articles every 15 minutes. The home page now ggrabs the cache from the db so no more lag time when it loads. Also added --> new users are verified through the SmartWaiver API to ensure waivers are on record before they are allowed to checkout.

--- a/Check_Out_App_ULC/Views/Home/Index.cshtml
+++ b/Check_Out_App_ULC/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ViewModels.SlingArticlesView>
+﻿@model IEnumerable<Check_Out_App_ULC.Models.tb_SlingCache>
 @using System.Data.SqlTypes
 @using System.Web.Mvc.Html;
 
