--- a/Check_Out_App_ULC/Views/Home/Index.cshtml
+++ b/Check_Out_App_ULC/Views/Home/Index.cshtml
@@ -119,19 +119,11 @@
                         </a>
                     </div>
                 }
-                @if (SessionVariables.CurrentUser != null && SessionVariables.CurrentUser.ENAME == "russell1")
+                @if (SessionVariables.CurrentUser != null && SessionVariables.CurrentUser.ManagerRights.HasValue)
                 {
                     <div class="col-sm-6 col-md-4 col-lg-3 margin-top-20">
                         <a href="@Url.Action("UsageReports", "tb_CSUCheckoutCheckin")" class="btn btn-primary btn-md btn-block">
                             <span class="glyphicon glyphicon-export"></span> Usage Reports
-                        </a>
-                    </div>
-                }
-                @if (SessionVariables.CurrentUser != null && SessionVariables.CurrentUser.ENAME == "russell1")
-                {
-                    <div class="col-sm-6 col-md-4 col-lg-3 margin-top-20">
-                        <a href="@Url.Action("TestSmartWaiver", "tb_CSULabTechs")" class="btn btn-primary btn-md btn-block">
-                            <span class="glyphicon glyphicon-export"></span> Test SmartWaiver
                         </a>
                     </div>
                 }
