Fixed error with query by item display.

--- a/Check_Out_App_ULC/Views/tb_CSUCheckoutCheckin/UsageReports.cshtml
+++ b/Check_Out_App_ULC/Views/tb_CSUCheckoutCheckin/UsageReports.cshtml
@@ -71,7 +71,7 @@
         }
         if (d.ItemUpc != null)
         {
-            hour = true;
+            item = true;
         }
         break;
     }
