--- a/Check_Out_App_ULC/Views/Home/Index.cshtml
+++ b/Check_Out_App_ULC/Views/Home/Index.cshtml
@@ -127,6 +127,14 @@
                         </a>
                     </div>
                 }
+                @if (SessionVariables.CurrentUser != null && SessionVariables.CurrentUser.ManagerRights.HasValue && SessionVariables.CurrentUserId == "russell1")
+                {
+                    <div class="col-sm-6 col-md-4 col-lg-3 margin-top-20">
+                        <a href="@Url.Action("Trello", "tb_ItemRepair")" class="btn btn-primary btn-md btn-block">
+                            <span class="glyphicon glyphicon-export"></span> Trello
+                        </a>
+                    </div>
+                }
             </div>
         </div>
     }
